@@ -1,5 +1,9 @@
 2007-11-05  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/structural.properties.R (page.rank)
+	* interfaces/R/src/rinterface.c.in (R_igraph_pagerank) :
+	removed, generated by Stimulus
+
 	* interfaces/R/igraph/R/community.R (leading.eigenvector.community) :
 	removed 'naive' version, generated by Stimulus now
 	* interfaces/R/src/rinterface.c.in : updated
